fix: mixins.spacing returning wrong CSS Var and create add-shadow

--- a/src/theme/utils/_mixins.scss
+++ b/src/theme/utils/_mixins.scss
@@ -1,17 +1,19 @@
+@use 'variables';
+
 @function spacing($multiplier) {
-  @return calc(var(---base-spacing) * #{$multiplier});
+  @return calc(var(--base-spacing) * #{$multiplier});
 }
 
 /** Base color should be HUE, SATURATION, without providing Lightness */
 @mixin generate-palette($base-color, $name) {
   @for $i from 1 to 10 {
-    --color-#{$name}-#{$i}0: #{hsl($base-color $i * 10%)};
+    --color-#{$name}-#{$i}0: #{hsl($base-color, $i * 10%)};
   }
 }
 
 @mixin generate-text-palette($base-color) {
-  @each $emphasis, $opacity in ("high": 87%, "medium": 50%, "low": 18%) {
-    --text-#{$emphasis}: #{hsl($base-color $opacity)};
+  @each $emphasis, $opacity in ('high': 0.87, 'medium': 0.5, 'low': 0.18) {
+    --text-#{$emphasis}: #{hsla($base-color, $opacity)};
   }
 }
 
@@ -37,7 +39,7 @@
 
 @mixin breakpoint-only($breakpoint) {
   @if map-has-key($breakpoints, $breakpoint) {
-    @if $breakpoint == "xl" {
+    @if $breakpoint == 'xl' {
       @media only screen and (min-width: map-get($breakpoints, $breakpoint)) {
         @content;
       }
@@ -45,7 +47,7 @@
       // get the key/value pair for the adjacent bigger breakpoint.
       $next-breakpoint: nth(
         $breakpoints,
-        index(map-keys($breakpoints), "xs") + 1
+        index(map-keys($breakpoints), 'xs') + 1
       );
       // get value from key/value pair
       $next-breakpoint-value: nth($next-breakpoint, 2);
@@ -55,5 +57,34 @@
     }
   } @else {
     @warn "No `#{$breakpoint}` breakpoint. Available breakpoints are: #{map-keys($breakpoints)}.";
+  }
+}
+
+/** Every shadowed component should be nested, otherwise the shadow will overlap the content */
+@mixin add-shadow(
+  $content-class,
+  $color: var(--text-high),
+  $distance: 0.5rem,
+  $direction: 'left'
+) {
+  position: relative;
+
+  &:before {
+    content: '';
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    z-index: -1;
+    height: 100%;
+    left: 0;
+    background-color: var(--text-high);
+  }
+
+  &:hover {
+    & .#{$content-class} {
+      transition: transform 0.2s cubic-bezier(0.25, 0.46, 0.45, 0.94);
+      transform: translateY(calc(-1 * $distance));
+    }
   }
 }
